--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@
             
         </h3>
         <div class="post-content-preview">
-            ...
+            啥玩意呀
+...
         </div>
     </a>
     
